--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
 							<header>
 							  <h2>വാർത്തകൾ</h2>
 							  <h2>&nbsp;</h2>
-							 <li><a href="/news/index.html"><h2>ഇവിടെ നൽകാം </h2></a></li>
+							 <li><a href="https://ilalife.github.io/news/"><h2>ഇവിടെ നൽകാം </h2></a></li>
 							</header>
 							<p>നമ്മുടെ ഈ ഓൺലൈൻ പത്രത്തിൽ വാർത്തകളും പരസ്യങ്ങളും നൽകുന്നതിന്  താഴെയുള്ള  ഫോം  ഉപയോഗിക്കുക </p>
 							
-								<li><a href="/news/index.html"><h2>ഇവിടെ നൽകാം </h2></a></li>
+								<li><a href="https://ilalife.github.io/news/"><h2>ഇവിടെ നൽകാം </h2></a></li>
 							
-							<iframe frameborder="0" style="height:800px;width:99%;border:none;" src='https://forms.zohopublic.com/jijojohnsonk/form/Untitled/formperma/TmNfSXyrvuegaiXUy1wdFqGH6RohX8QZDfpBVczxR9I'></iframe>
+							<iframe frameborder="0" style="height:800px;width:99%;border:none;" src='https://ilalife.github.io/news/'></iframe>
 						</section>
 					</div>
 				</div>
