--- a/index.html
+++ b/index.html
@@ -57,26 +57,26 @@
 				<div class="row">
 					<div class="3u">
 						<section>
-							<a href="https://youbook-epaper.github.io/skip/" class="image full"><img src="http://drive.google.com/uc?export=view&id=10NxJbZmMHwR7-v-0ugBuourbfOfp3nqN" alt="" /></a>
-							<a href="https://youbook-epaper.github.io/skip/" class="button">വാർത്ത വിശദമായി </a>
+							<a href="https://drive.google.com/file/d/1LUbnjW_7Wlio78GEVZK7gOGROLpRWXIr/view?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&id=10NxJbZmMHwR7-v-0ugBuourbfOfp3nqN" alt="" /></a>
+							<a href="https://drive.google.com/file/d/1LUbnjW_7Wlio78GEVZK7gOGROLpRWXIr/view?usp=sharing" class="button">വാർത്തകൾ വിശദമായി </a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
-							<a href="https://youbook-epaper.github.io/skip2/" class="image full"><img src="http://drive.google.com/uc?export=view&id=1S-gFO9-YNSjetqpOmC13RKam-2bjLV0z" alt="" /></a>
-							<a href="https://youbook-epaper.github.io/skip2/" class="button">വാർത്ത വിശദമായി </a>
+							<a href="https://drive.google.com/file/d/1G_RGrFWwp97SxwGSUs2vhhvGcm4uAlFF/view?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&id=1S-gFO9-YNSjetqpOmC13RKam-2bjLV0z" alt="" /></a>
+							<a href="https://drive.google.com/file/d/1G_RGrFWwp97SxwGSUs2vhhvGcm4uAlFF/view?usp=sharing" class="button">വാർത്തകൾ വിശദമായി </a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
-							<a href="https://youbook-epaper.github.io/skip3/" class="image full"><img src="http://drive.google.com/uc?export=view&id=1a73xZvYyN1wmtPiUVVWGdB3U7BVY6in1" alt="" /></a>
-							<a href="https://youbook-epaper.github.io/skip3/" class="button">വാർത്ത വിശദമായി </a>
+							<a href="https://drive.google.com/file/d/1w4omlekamk3bchsIx_VxSJZvl32t_4M6/view?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&id=1a73xZvYyN1wmtPiUVVWGdB3U7BVY6in1" alt="" /></a>
+							<a href="https://drive.google.com/file/d/1w4omlekamk3bchsIx_VxSJZvl32t_4M6/view?usp=sharing" class="button">വാർത്തകൾ വിശദമായി </a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
-							<a href="https://youbook-epaper.github.io/skip4/" class="image full"><img src="http://drive.google.com/uc?export=view&id=1FwtlmrqP26YJ5k9jWCGQUJLui1rrJ6hz" alt="" /></a>
-							<a href="https://youbook-epaper.github.io/skip4/" class="button">വാർത്ത വിശദമായി </a>
+							<a href="https://drive.google.com/file/d/1O949uq36IqH5D-y2hk1l4fpdGk6qkzrQ/view?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&id=1FwtlmrqP26YJ5k9jWCGQUJLui1rrJ6hz" alt="" /></a>
+							<a href="https://drive.google.com/file/d/1O949uq36IqH5D-y2hk1l4fpdGk6qkzrQ/view?usp=sharing" class="button">വാർത്തകൾ വിശദമായി </a>
 						</section>
 					</div>
 				</div>
@@ -140,7 +140,7 @@
 							
 								<li><a href="https://ilalife.github.io/news/"><h2>ഇവിടെ നൽകാം </h2></a></li>
 							
-							<iframe frameborder="0" style="height:529px;width:500px;border:none;" src='https://ilalife.github.io/news/'></iframe>
+							<iframe frameborder="0" style="height:800px;width:99%;border:none;" src='https://ilalife.github.io/news/'></iframe>
 						</section>
 					</div>
 				</div>
