--- a/index.html
+++ b/index.html
@@ -57,26 +57,26 @@
 				<div class="row">
 					<div class="3u">
 						<section>
-							<a href="https://drive.google.com/file/d/1LUbnjW_7Wlio78GEVZK7gOGROLpRWXIr/view?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&id=10NxJbZmMHwR7-v-0ugBuourbfOfp3nqN" alt="" /></a>
-							<a href="https://drive.google.com/file/d/1LUbnjW_7Wlio78GEVZK7gOGROLpRWXIr/view?usp=sharing" class="button">വാർത്തകൾ വിശദമായി </a>
+							<a href="https://drive.google.com/file/d/1LUbnjW_7Wlio78GEVZK7gOGROLpRWXIr/view?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=10NxJbZmMHwR7-v-0ugBuourbfOfp3nqN"></a>
+							<a href="https://drive.google.com/file/d/1LUbnjW_7Wlio78GEVZK7gOGROLpRWXIr/view?usp=sharing" class="button">വാർത്ത വിശദമായി </a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
-							<a href="https://drive.google.com/file/d/1G_RGrFWwp97SxwGSUs2vhhvGcm4uAlFF/view?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&id=1S-gFO9-YNSjetqpOmC13RKam-2bjLV0z" alt="" /></a>
-							<a href="https://drive.google.com/file/d/1G_RGrFWwp97SxwGSUs2vhhvGcm4uAlFF/view?usp=sharing" class="button">വാർത്തകൾ വിശദമായി </a>
+							<a href="https://docs.google.com/document/d/1G2yjn7uVEGNAz988FCQJK6vhQGNCsKjWSzfyKvGfWjg/edit?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=1S-gFO9-YNSjetqpOmC13RKam-2bjLV0z"></a>
+							<a href="https://docs.google.com/document/d/1G2yjn7uVEGNAz988FCQJK6vhQGNCsKjWSzfyKvGfWjg/edit?usp=sharing" class="button">വാർത്ത വിശദമായി </a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
-							<a href="https://drive.google.com/file/d/1w4omlekamk3bchsIx_VxSJZvl32t_4M6/view?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&id=1a73xZvYyN1wmtPiUVVWGdB3U7BVY6in1" alt="" /></a>
-							<a href="https://drive.google.com/file/d/1w4omlekamk3bchsIx_VxSJZvl32t_4M6/view?usp=sharing" class="button">വാർത്തകൾ വിശദമായി </a>
+							<a href="https://docs.google.com/document/d/1RwiYFowfjVnGqJ_6lnFCWtH0BzYVuK9UnxFyoZJPnoI/edit?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=1a73xZvYyN1wmtPiUVVWGdB3U7BVY6in1"></a>
+							<a href="https://docs.google.com/document/d/1RwiYFowfjVnGqJ_6lnFCWtH0BzYVuK9UnxFyoZJPnoI/edit?usp=sharing" class="button">വാർത്ത വിശദമായി </a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
-							<a href="https://drive.google.com/file/d/1O949uq36IqH5D-y2hk1l4fpdGk6qkzrQ/view?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&id=1FwtlmrqP26YJ5k9jWCGQUJLui1rrJ6hz" alt="" /></a>
-							<a href="https://drive.google.com/file/d/1O949uq36IqH5D-y2hk1l4fpdGk6qkzrQ/view?usp=sharing" class="button">വാർത്തകൾ വിശദമായി </a>
+							<a href="https://docs.google.com/document/d/1W2t-PS2vtN5ajXXKpwIIR4zXvwAe7HpcEeqD3Ypiihw/edit?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=1FwtlmrqP26YJ5k9jWCGQUJLui1rrJ6hz"></a>
+							<a href="https://docs.google.com/document/d/1W2t-PS2vtN5ajXXKpwIIR4zXvwAe7HpcEeqD3Ypiihw/edit?usp=sharing" class="button">വാർത്ത വിശദമായി </a>
 						</section>
 					</div>
 				</div>
