--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
 </div>
 			
 			</div>
+			
+			<div style="text-align:center;padding:1em 0;"> <h3><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/en/city/1254187"><span style="color:gray;">Current local time in</span><br />Thrissur, India</a></h3> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=en&size=medium&timezone=Asia%2FKolkata" width="100%" height="115" frameborder="0" seamless></iframe> </div>
+			
 		</div>
 	<!-- Main -->
 
