--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="active"><a href="index.html">Homepage</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="threecolumn.html">Local News</a></li>
-							<li><a href="twocolumn1.html">Kerala News</a></li>
-							<li><a href="twocolumn2.html">India News</a></li>
+							<li><a href="twocolumn1.html">Todays Events</a></li>
+							<li><a href="twocolumn2.html">Upcoming Events</a></li>
 							<li><a href="https://ilalife.github.io/news/">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 					</nav>
@@ -57,26 +57,26 @@
 				<div class="row">
 					<div class="3u">
 						<section>
-							<a href="https://drive.google.com/file/d/1LUbnjW_7Wlio78GEVZK7gOGROLpRWXIr/view?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=10NxJbZmMHwR7-v-0ugBuourbfOfp3nqN"></a>
-							<a href="https://drive.google.com/file/d/1LUbnjW_7Wlio78GEVZK7gOGROLpRWXIr/view?usp=sharing" class="button">വാർത്ത വിശദമായി </a>
+							<a href="https://docs.google.com/document/d/e/2PACX-1vS1RFGsv9Lj-_Yd10X9auCN0FpDaCZyBm5YqbKvnbejjo80b6zaRd5RJXrvg6QLFryWnhH45t97JUMG/pub" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=10NxJbZmMHwR7-v-0ugBuourbfOfp3nqN"></a>
+							<a href="https://docs.google.com/document/d/e/2PACX-1vS1RFGsv9Lj-_Yd10X9auCN0FpDaCZyBm5YqbKvnbejjo80b6zaRd5RJXrvg6QLFryWnhH45t97JUMG/pub" class="button">വാർത്ത വിശദമായി </a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
-							<a href="https://docs.google.com/document/d/1G2yjn7uVEGNAz988FCQJK6vhQGNCsKjWSzfyKvGfWjg/edit?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=1S-gFO9-YNSjetqpOmC13RKam-2bjLV0z"></a>
-							<a href="https://docs.google.com/document/d/1G2yjn7uVEGNAz988FCQJK6vhQGNCsKjWSzfyKvGfWjg/edit?usp=sharing" class="button">വാർത്ത വിശദമായി </a>
+							<a href="https://docs.google.com/document/d/e/2PACX-1vSwCCh9OuBDHlF7ftjdzPU33EAtiMJnbU4sW-7MDXFCwm26DwEoz-9fQ3X1tDqHbvsxjTmp9uCkdTum/pub" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=1S-gFO9-YNSjetqpOmC13RKam-2bjLV0z"></a>
+							<a href="https://docs.google.com/document/d/e/2PACX-1vSwCCh9OuBDHlF7ftjdzPU33EAtiMJnbU4sW-7MDXFCwm26DwEoz-9fQ3X1tDqHbvsxjTmp9uCkdTum/pub" class="button">വാർത്ത വിശദമായി </a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
-							<a href="https://docs.google.com/document/d/1RwiYFowfjVnGqJ_6lnFCWtH0BzYVuK9UnxFyoZJPnoI/edit?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=1a73xZvYyN1wmtPiUVVWGdB3U7BVY6in1"></a>
-							<a href="https://docs.google.com/document/d/1RwiYFowfjVnGqJ_6lnFCWtH0BzYVuK9UnxFyoZJPnoI/edit?usp=sharing" class="button">വാർത്ത വിശദമായി </a>
+							<a href="https://docs.google.com/document/d/e/2PACX-1vSY0-NHJ0xd-fBomhyz1EGOSXOqXxojAcIR1pvThZfL-4JpDklCiIbNrFHRk-v2QUx5Z2sA0z_EldZY/pub" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=1a73xZvYyN1wmtPiUVVWGdB3U7BVY6in1"></a>
+							<a href="https://docs.google.com/document/d/e/2PACX-1vSY0-NHJ0xd-fBomhyz1EGOSXOqXxojAcIR1pvThZfL-4JpDklCiIbNrFHRk-v2QUx5Z2sA0z_EldZY/pub" class="button">വാർത്ത വിശദമായി </a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
-							<a href="https://docs.google.com/document/d/1W2t-PS2vtN5ajXXKpwIIR4zXvwAe7HpcEeqD3Ypiihw/edit?usp=sharing" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=1FwtlmrqP26YJ5k9jWCGQUJLui1rrJ6hz"></a>
-							<a href="https://docs.google.com/document/d/1W2t-PS2vtN5ajXXKpwIIR4zXvwAe7HpcEeqD3Ypiihw/edit?usp=sharing" class="button">വാർത്ത വിശദമായി </a>
+							<a href="https://docs.google.com/document/d/e/2PACX-1vRtitmYlTzaeVsVUT9KfSu4xS_du11y81cGvdZ6jdFvGOqPHhHnz4P6imwxKdv7tfehxJ3tMpr7e0n_/pub" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=1FwtlmrqP26YJ5k9jWCGQUJLui1rrJ6hz"></a>
+							<a href="https://docs.google.com/document/d/e/2PACX-1vRtitmYlTzaeVsVUT9KfSu4xS_du11y81cGvdZ6jdFvGOqPHhHnz4P6imwxKdv7tfehxJ3tMpr7e0n_/pub" class="button">വാർത്ത വിശദമായി </a>
 						</section>
 					</div>
 				</div>
