--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Monochromed by TEMPLATED</title>
+		<title>Today's Events</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
