--- a/threecolumn.html
+++ b/threecolumn.html
@@ -31,18 +31,20 @@
 					
 				<!-- Logo -->
 					<div id="logo">
-						<h1><a href="#">Monochromed</a></h1>
-						<span>Design by TEMPLATED</span>
+						<<h1><a href="index.html">YOU-BOOK</a></h1>
+						<span>Local updates</span>
 					</div>
 				
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Homepage</a></li>
-							<li class="active"><a href="threecolumn.html">Two Sidebars</a></li>
-							<li><a href="twocolumn1.html">Left Sidebar</a></li>
-							<li><a href="twocolumn2.html">Right Sidebar</a></li>
-							<li><a href="onecolumn.html">No Sidebar</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li class="active"><a href="threecolumn.html">പ്രാദേശിക വാർത്തകൾ 
+</a></li>
+							<li><a href="twocolumn1.html">ഇന്നത്തെ പരിപാടികൾ 
+</a></li>
+							<li><a href="twocolumn2.html"> വരാനിരിക്കുന്ന പരിപാടികൾ </a></li>
+							<li><a href="onecolumn.html">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 					</nav>
 
