--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -39,9 +39,11 @@
 					<nav id="nav">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="threecolumn.html">Local News</a></li>
-							<li><a href="twocolumn1.html">Todays Events</a></li>
-							<li class="active"><a href="twocolumn2.html">Upcoming Events</a></li>
+							<li><a href="threecolumn.html">പ്രാദേശിക വാർത്തകൾ 
+</a></li>
+							<li><a href="twocolumn1.html">ഇന്നത്തെ പരിപാടികൾ 
+</a></li>
+							<li class="active"><a href="twocolumn2.html"> വരാനിരിക്കുന്ന പരിപാടികൾ </a></li>
 							<li><a href="https://ilalife.github.io/news/">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 					</nav>
