--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					
 				<!-- Logo -->
 					<div id="logo">
-						<h1><a href="#">YOU-BOOK</a></h1>
+						<h1><a href="index.html">YOU-BOOK</a></h1>
 						<span>Local updates</span>
 					</div>
 				
@@ -37,9 +37,9 @@
 					<nav id="nav">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="threecolumn.html">Local News</a></li>
-							<li><a href="twocolumn1.html">Todays Events</a></li>
-							<li><a href="twocolumn2.html">Upcoming Events</a></li>
+							<li><a href="threecolumn.html">പ്രാദേശിക വാർത്തകൾ </a></li>
+							<li><a href="twocolumn1.html">ഇന്നത്തെ പരിപാടികൾ </a></li>
+							<li><a href="twocolumn2.html"> വരാനിരിക്കുന്ന പരിപാടികൾ </a></li>
 							<li><a href="https://ilalife.github.io/news/">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 					</nav>
