--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Monochromed by TEMPLATED
-    templated.co @templatedco
-    Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
 	<head>
 		<title>Today's Events</title>
@@ -38,10 +34,11 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Homepage</a></li>
-							<li><a href="threecolumn.html">Local News</a></li>
-							<li class="active"><a href="twocolumn1.html">Today's events</a></li>
-							<<li><a href="twocolumn2.html">Upcoming Events</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="threecolumn.html">പ്രാദേശിക വാർത്തകൾ 
+</a></li>
+							<li class="active"><a href="twocolumn1.html">ഇന്നത്തെ പരിപാടികൾ </a></li>
+							<<li><a href="twocolumn2.html"> വരാനിരിക്കുന്ന പരിപാടികൾ </a></li>
 							<li><a href="https://ilalife.github.io/news/">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 					</nav>
