--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							<center><header>
 								<h2>For Adverstisements</h2>
 							</header></center>
-							<center><a href="https://youbook-epaper.github.io/skip3/" class="button large hpbottom">Click here</a></center></center>
+							<center><a href="https://zfrmz.com/AC0qXlu0HDVP8tPtG6MC" class="button large hpbottom">Click here</a></center></center>
 						</section>
 					</div>
 				</div>
