--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
-		 <link rel="stylesheet" href="style.css">
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
@@ -17,11 +16,10 @@
 		<script src="js/init.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
-		
+			<link rel="stylesheet" href="css/style.css" />
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
-		
 	</head>
 	<body class="homepage">
 
@@ -31,18 +29,18 @@
 					
 				<!-- Logo -->
 					<div id="logo">
-						<h1><a href="index.html">YOU-BOOK</a></h1>
+						<h1><a href="#">YOU-BOOK</a></h1>
 						<span>Local updates</span>
 					</div>
 				
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="threecolumn.html">പ്രാദേശിക വാർത്തകൾ </a></li>
-							<li><a href="twocolumn1.html">ഇന്നത്തെ പരിപാടികൾ </a></li>
-							<li><a href="twocolumn2.html"> വരാനിരിക്കുന്ന പരിപാടികൾ </a></li>
-							<li><a href="https://ilalife.github.io/news/">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
+							<li class="active"><a href="index.html" class="button large hpbottom">Home</a></li>
+							<li><a href="threecolumn.html"class="button large hpbottom">Local News</a></li>
+							<li><a href="twocolumn1.html"class="button large hpbottom">Todays Events</a></li>
+							<li><a href="twocolumn2.html"class="button large hpbottom">Upcoming Events</a></li>
+							<li><a href="https://ilalife.github.io/news/"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 					</nav>
 
@@ -104,11 +102,11 @@
 					</div>
 					<div class="3u"> </div>
 					<div class="6u">
-					<center>	<section>
+						<section>
 							<center><header>
 								<h2>For Adverstisements</h2>
 							</header></center>
-							<center><a href="https://zfrmz.com/AC0qXlu0HDVP8tPtG6MC" class="button large hpbottom">Click here</a></center></center>
+							<center><a href="https://youbook-epaper.github.io/skip3/" class="button large hpbottom">Click here</a></center>
 						</section>
 					</div>
 				</div>
