--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -35,12 +35,12 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="threecolumn.html">പ്രാദേശിക വാർത്തകൾ 
+							<li><a href="index.html"class="button large hpbottom">Home</a></li>
+							<li><a href="threecolumn.html"class="button large hpbottom">പ്രാദേശിക വാർത്തകൾ 
 </a></li>
-							<li class="active"><a href="twocolumn1.html">ഇന്നത്തെ പരിപാടികൾ </a></li>
-							<<li><a href="twocolumn2.html"> വരാനിരിക്കുന്ന പരിപാടികൾ </a></li>
-							<li><a href="https://ilalife.github.io/news/">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
+							<li class="active"><a href="twocolumn1.html"class="button large hpbottom">ഇന്നത്തെ പരിപാടികൾ </a></li>
+							<<li><a href="twocolumn2.html"class="button large hpbottom"> വരാനിരിക്കുന്ന പരിപാടികൾ </a></li>
+							<li><a href="https://ilalife.github.io/news/"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 					</nav>
 
