--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -39,13 +39,13 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="threecolumn.html">പ്രാദേശിക വാർത്തകൾ 
+							<li class="active"><a href="index.html"class="button large hpbottom">Home</a></li>
+							<li><a href="threecolumn.html"class="button large hpbottom">പ്രാദേശിക വാർത്തകൾ 
 </a></li>
-							<li><a href="twocolumn1.html">ഇന്നത്തെ പരിപാടികൾ 
+							<li><a href="twocolumn1.html"class="button large hpbottom">ഇന്നത്തെ പരിപാടികൾ 
 </a></li>
-							<li class="active"><a href="twocolumn2.html"> വരാനിരിക്കുന്ന പരിപാടികൾ </a></li>
-							<li><a href="https://ilalife.github.io/news/">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
+							<li class="active"><a href="twocolumn2.html"class="button large hpbottom"> വരാനിരിക്കുന്ന പരിപാടികൾ </a></li>
+							<li><a href="https://ilalife.github.io/news/"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 					</nav>
 
