--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 					<nav id="nav">
 						<ul>
 							<li class="active"><a href="index.html" class="button large hpbottom">Home</a></li>
-							<li><a href="threecolumn.html"class="button large hpbottom">Local News</a></li>
-							<li><a href="twocolumn1.html"class="button large hpbottom">Todays Events</a></li>
-							<li><a href="twocolumn2.html"class="button large hpbottom">Upcoming Events</a></li>
+							<li><a href="threecolumn.html"class="button large hpbottom">പ്രാദേശിക വാർത്തകൾ </a></li>
+							<li><a href="twocolumn1.html"class="button large hpbottom">ഇന്നത്തെ പരിപാടികൾ</a></li>
+							<li><a href="twocolumn2.html"class="button large hpbottom">വരാനിരിക്കുന്ന പരിപാടികൾ</a></li>
 							<li><a href="https://ilalife.github.io/news/"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 					</nav>
