--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -69,7 +69,31 @@
 		</div>
 	<!-- Main -->
 
-	<!-- Footer -->	<!-- Footer -->
+	<!-- Footer -->	<div id="footer">
+			<div class="container">
+				<div class="row">
+					<div class="3u">
+						<section> </section>
+					</div>
+					<div class="3u"> </div>
+					<div class="6u">
+						<section>
+							<center><header>
+								<h2>For Adverstisements</h2>
+							</header></center>
+							<center><a href="https://youbook-epaper.github.io/skip3/" class="button large hpbottom">Click here</a></center>
+						</section>
+					</div>
+					<ul>
+							<li class="active"><a href="index.html" class="button large hpbottom">Home</a></li>
+							<li><a href="threecolumn.html"class="button large hpbottom">പ്രാദേശിക വാർത്തകൾ </a></li>
+							<li><a href="twocolumn1.html"class="button large hpbottom">ഇന്നത്തെ പരിപാടികൾ</a></li>
+							<li><a href="twocolumn2.html"class="button large hpbottom">വരാനിരിക്കുന്ന പരിപാടികൾ</a></li>
+							<li><a href="https://ilalife.github.io/news/"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
+						</ul>
+				</div>
+			</div>
+		</div><!-- Footer -->
 
 	<!-- Copyright -->
 		
