--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 							<li><a href="threecolumn.html"class="button large hpbottom">പ്രാദേശിക വാർത്തകൾ </a></li>
 							<li><a href="twocolumn1.html"class="button large hpbottom">ഇന്നത്തെ പരിപാടികൾ</a></li>
 						  <li><a href="twocolumn2.html"class="button large hpbottom">വരാനിരിക്കുന്ന പരിപാടികൾ</a></li>
-							<li><a href="https://ilalife.github.io/news/"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
+							<li><a href="https://docs.google.com/document/d/e/2PACX-1vSczyeRsLmON8EqDNLZo5AwMz5Ig0ceKVxldcRMF3tBJ38L8YYp1aqP6L7a1pUYWLqG8LHgPBj4Bxbo/pub"class="button large hpbottom">ഓർത്തുവെക്കേണ്ട ഫോൺ നമ്പറുകൾ  </a></li>
+							<li><a href="https://zfrmz.com/ccGJSc9iSraAvh5tl6Au"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 					</nav>
 
@@ -115,7 +116,8 @@
 							<li><a href="threecolumn.html"class="button large hpbottom">പ്രാദേശിക വാർത്തകൾ </a></li>
 							<li><a href="twocolumn1.html"class="button large hpbottom">ഇന്നത്തെ പരിപാടികൾ</a></li>
 							<li><a href="twocolumn2.html"class="button large hpbottom">വരാനിരിക്കുന്ന പരിപാടികൾ</a></li>
-							<li><a href="https://ilalife.github.io/news/"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
+							<li><a href="https://docs.google.com/document/d/e/2PACX-1vSczyeRsLmON8EqDNLZo5AwMz5Ig0ceKVxldcRMF3tBJ38L8YYp1aqP6L7a1pUYWLqG8LHgPBj4Bxbo/pub"class="button large hpbottom">ഓർത്തുവെക്കേണ്ട ഫോൺ നമ്പറുകൾ  </a></li>
+							<li><a href="https://zfrmz.com/ccGJSc9iSraAvh5tl6Au"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 				</div>
 			</div>
