--- a/threecolumn.html
+++ b/threecolumn.html
@@ -44,7 +44,7 @@
 							<li><a href="twocolumn1.html"class="button large hpbottom">ഇന്നത്തെ പരിപാടികൾ 
 </a></li>
 							<li><a href="twocolumn2.html"class="button large hpbottom"> വരാനിരിക്കുന്ന പരിപാടികൾ </a></li>
-							<li><a href="https://youbook-epaper.github.io/skip4/">ഓർത്തുവെക്കേണ്ട ഫോൺ നമ്പറുകൾ  </a></li>
+							<li><a href="https://youbook-epaper.github.io/skip4/"class="button large hpbottom">ഓർത്തുവെക്കേണ്ട ഫോൺ നമ്പറുകൾ  </a></li>
 							<li><a href="https://zfrmz.com/ccGJSc9iSraAvh5tl6Au"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 					</nav>
@@ -85,7 +85,7 @@
 							<li><a href="threecolumn.html"class="button large hpbottom">പ്രാദേശിക വാർത്തകൾ </a></li>
 							<li><a href="twocolumn1.html"class="button large hpbottom">ഇന്നത്തെ പരിപാടികൾ</a></li>
 							<li><a href="twocolumn2.html"class="button large hpbottom">വരാനിരിക്കുന്ന പരിപാടികൾ</a></li>
-							<li><a href="https://youbook-epaper.github.io/skip4/">ഓർത്തുവെക്കേണ്ട ഫോൺ നമ്പറുകൾ  </a></li>
+							<li><a href="https://youbook-epaper.github.io/skip4/"class="button large hpbottom">ഓർത്തുവെക്കേണ്ട ഫോൺ നമ്പറുകൾ  </a></li>
 							<li><a href="https://zfrmz.com/ccGJSc9iSraAvh5tl6Au"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 				</div>
