--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>E Paper</title>
+		<title>You Book</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
