--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 -->
 <html>
 	<head>
+		<link rel="icon" type="image/png" href="favicon.jpg" />
 		<title>You Book</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
