--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<link rel="icon" type="image/png" href="favicon.jpg" />
+		<link rel="icon" type="image/png" href="http://drive.google.com/uc?export=view&id=1IdqHT2B5tUOZ96y9tPO0UTeDiG5BWAPC" />
 		<title>You Book</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
