--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -53,7 +53,7 @@
 		<div id="main">
 			<div class="container">
 				<div class="row">&nbsp;
-				  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQH_LEQAiW4U2XE-Rhyr83U2T1dPkdPbKYYRNKnHlP6pW_koUVQpyzlrv6_jzCf3QysTpvTz2bSqxp3/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1024" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+				 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQH_LEQAiW4U2XE-Rhyr83U2T1dPkdPbKYYRNKnHlP6pW_koUVQpyzlrv6_jzCf3QysTpvTz2bSqxp3/embed?start=true&loop=true&delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 						
 			  </div>
 			
