--- a/index.html
+++ b/index.html
@@ -58,31 +58,7 @@
 				<header>
 					<h2>പ്രധാന വാർത്തകൾ </h2>
 				</header>
-				<div class="row">
-					<div class="3u">
-						<section>
-							<a href="https://docs.google.com/document/d/e/2PACX-1vS1RFGsv9Lj-_Yd10X9auCN0FpDaCZyBm5YqbKvnbejjo80b6zaRd5RJXrvg6QLFryWnhH45t97JUMG/pub" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=10NxJbZmMHwR7-v-0ugBuourbfOfp3nqN"></a>
-							<a href="https://docs.google.com/document/d/e/2PACX-1vS1RFGsv9Lj-_Yd10X9auCN0FpDaCZyBm5YqbKvnbejjo80b6zaRd5RJXrvg6QLFryWnhH45t97JUMG/pub" class="button">വാർത്ത വിശദമായി </a>
-						</section>
-					</div>
-					<div class="3u">
-						<section>
-							<a href="https://docs.google.com/document/d/e/2PACX-1vSwCCh9OuBDHlF7ftjdzPU33EAtiMJnbU4sW-7MDXFCwm26DwEoz-9fQ3X1tDqHbvsxjTmp9uCkdTum/pub" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=1S-gFO9-YNSjetqpOmC13RKam-2bjLV0z"></a>
-							<a href="https://docs.google.com/document/d/e/2PACX-1vSwCCh9OuBDHlF7ftjdzPU33EAtiMJnbU4sW-7MDXFCwm26DwEoz-9fQ3X1tDqHbvsxjTmp9uCkdTum/pub" class="button">വാർത്ത വിശദമായി </a>
-						</section>
-					</div>
-					<div class="3u">
-						<section>
-							<a href="https://docs.google.com/document/d/e/2PACX-1vSY0-NHJ0xd-fBomhyz1EGOSXOqXxojAcIR1pvThZfL-4JpDklCiIbNrFHRk-v2QUx5Z2sA0z_EldZY/pub" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=1a73xZvYyN1wmtPiUVVWGdB3U7BVY6in1"></a>
-							<a href="https://docs.google.com/document/d/e/2PACX-1vSY0-NHJ0xd-fBomhyz1EGOSXOqXxojAcIR1pvThZfL-4JpDklCiIbNrFHRk-v2QUx5Z2sA0z_EldZY/pub" class="button">വാർത്ത വിശദമായി </a>
-						</section>
-					</div>
-					<div class="3u">
-						<section>
-							<a href="https://docs.google.com/document/d/e/2PACX-1vRtitmYlTzaeVsVUT9KfSu4xS_du11y81cGvdZ6jdFvGOqPHhHnz4P6imwxKdv7tfehxJ3tMpr7e0n_/pub" class="image full"><img src="http://drive.google.com/uc?export=view&amp;id=1FwtlmrqP26YJ5k9jWCGQUJLui1rrJ6hz"></a>
-							<a href="https://docs.google.com/document/d/e/2PACX-1vRtitmYlTzaeVsVUT9KfSu4xS_du11y81cGvdZ6jdFvGOqPHhHnz4P6imwxKdv7tfehxJ3tMpr7e0n_/pub" class="button">വാർത്ത വിശദമായി </a>
-						</section>
-					</div>
+				<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vS8Z1vWjEvSkyyMgKwNF34iBhpNbzVe_2_G_9D2NfJXJeY0LJft7mSYQKs9l2oP0hY28f2SsNUDnVlR/embed?start=true&loop=true&delayms=10000" frameborder="0" width="960" height="629" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 					&nbsp;
 				</div>
 <div class="row">
