--- a/threecolumn.html
+++ b/threecolumn.html
@@ -58,7 +58,7 @@
 	<div id="main">
 			<div class="container">
 				<div class="row">
-					<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vS8Z1vWjEvSkyyMgKwNF34iBhpNbzVe_2_G_9D2NfJXJeY0LJft7mSYQKs9l2oP0hY28f2SsNUDnVlR/embed?start=true&loop=true&delayms=10000" frameborder="0" width="960" height="629" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+					<iframe src="https://docs.google.com/document/d/e/2PACX-1vSXnRIs-yOP4Syv69-pSd0cTa5qpvCoXqTEczMEiN_-ZcWGZAqNOyA6YiNJE-I1oygVjbhoOJvVngeN/pub?embedded=true" width="960" height="629" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 			
 			</div>
 		</div>
