--- a/threecolumn.html
+++ b/threecolumn.html
@@ -58,7 +58,7 @@
 	<div id="main">
 			<div class="container">
 				<div class="row">
-					<iframe src="https://docs.google.com/document/d/e/2PACX-1vSXnRIs-yOP4Syv69-pSd0cTa5qpvCoXqTEczMEiN_-ZcWGZAqNOyA6YiNJE-I1oygVjbhoOJvVngeN/pub?embedded=true" width="960" height="629" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+					<iframe  src="https://docs.google.com/document/d/e/2PACX-1vSXnRIs-yOP4Syv69-pSd0cTa5qpvCoXqTEczMEiN_-ZcWGZAqNOyA6YiNJE-I1oygVjbhoOJvVngeN/pub?embedded=true" width=100% height=100% allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 			
 			</div>
 		</div>
