--- a/threecolumn.html
+++ b/threecolumn.html
@@ -22,6 +22,7 @@
 			<link rel="stylesheet" href="css/style.css" />
 			
 		</noscript>
+		
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 	</head>
@@ -57,10 +58,7 @@
 	<!-- Main -->
 	<div id="main">
 			<div class="container">
-				<div class="row">
-					<iframe  src="https://docs.google.com/document/d/e/2PACX-1vSXnRIs-yOP4Syv69-pSd0cTa5qpvCoXqTEczMEiN_-ZcWGZAqNOyA6YiNJE-I1oygVjbhoOJvVngeN/pub?embedded=true" width=100% height=100% allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-			
-			</div>
+				<iframe src="https://docs.google.com/document/d/1HVgSgapwjc5daEojCvDGwtaawuwsCmobJVHd0U2yy-M/preview" style="border:1px #ffffff solid;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="720" width=100% allowfullscreen></iframe>
 		</div>
 	<!-- Main -->
 
