--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -79,10 +79,10 @@
 					<div class="3u"> </div>
 					<div class="6u">
 						<section>
+							<center><a href="https://zfrmz.com/AC0qXlu0HDVP8tPtG6MC" class="button large hpbottom">Click here</a></center>&nbsp;
 							<center><header>
-								<h2>For Adverstisements</h2>
+								<h2>To Adverstise in this page </h2>
 							</header></center>
-							<center><a href="https://youbook-epaper.github.io/skip3/" class="button large hpbottom">Click here</a></center>
 						</section>
 					</div>
 					<ul>
