--- a/threecolumn.html
+++ b/threecolumn.html
@@ -47,7 +47,7 @@
 </a></li>
 							<li><a href="twocolumn2.html"class="button large hpbottom"> വരാനിരിക്കുന്ന പരിപാടികൾ </a></li>
 							<li><a href="https://youbook-epaper.github.io/Contact/"class="button large hpbottom">ഓർത്തുവെക്കേണ്ട ഫോൺ നമ്പറുകൾ  </a></li>
-							<li><a href="https://zfrmz.com/ccGJSc9iSraAvh5tl6Au"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
+							<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdtDAqe9QmzuLFnw75K2VY0Ybj5tfJlGIgzORi5n_6etJcIwA/viewform?usp=sf_link"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 					</nav>
 
@@ -72,7 +72,7 @@
 					<div class="3u"> </div>
 					<div class="6u">
 						<section>
-							<center><a href="https://zfrmz.com/AC0qXlu0HDVP8tPtG6MC" class="button large hpbottom">Click here</a></center>&nbsp;
+							<center><a href="https://docs.google.com/forms/d/e/1FAIpQLSdD2be3qXEYXx0qqNvOTJEUfI2J--6l809Qa24shdRIzuMghQ/viewform?usp=sf_link" class="button large hpbottom">Click here</a></center>&nbsp;
 							<center><header>
 								<h2>To Adverstise in this page </h2>
 							</header></center>
@@ -84,7 +84,7 @@
 							<li><a href="twocolumn1.html"class="button large hpbottom">ഇന്നത്തെ പരിപാടികൾ</a></li>
 							<li><a href="twocolumn2.html"class="button large hpbottom">വരാനിരിക്കുന്ന പരിപാടികൾ</a></li>
 							<li><a href="https://youbook-epaper.github.io/Contact/"class="button large hpbottom">ഓർത്തുവെക്കേണ്ട ഫോൺ നമ്പറുകൾ  </a></li>
-							<li><a href="https://zfrmz.com/ccGJSc9iSraAvh5tl6Au"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
+							<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdtDAqe9QmzuLFnw75K2VY0Ybj5tfJlGIgzORi5n_6etJcIwA/viewform?usp=sf_link"class="button large hpbottom">വാർത്തകൾ  ഇവിടെ നൽകാം </a></li>
 						</ul>
 				</div>
 			</div>
